fixed the extra scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -90,6 +90,5 @@
 
 html,
 body {
-    overflow-x: hidden;
     scroll-behavior: smooth;
 }
